--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,7 +1,10 @@
-name: Python application
+name: Update repo_data.json
 
 on:
   push:
+    paths:
+    - '*'    
+    - '!repo_data.json'
   schedule:
     - cron:  '0 */6 * * *'
   
@@ -20,7 +23,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test with pytest
+    - name: Build repo_data.json
+      run: |
+        python3 repo_spider.json
+    - name: Push update
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
