--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r requirements.txt
     - name: Build repo_data.json
       run: |
-        python3 repo_spider.json
+        python3 repo_spider.py > repo_data.json
     - name: Push update
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
