--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -6,16 +6,14 @@ on:
     - '*'    
     - '!repo_data.json'
   schedule:
-    - cron:  '0 */6 * * *'
+    - cron: '0 */6 * * *'
   
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
